Bump log4j.version from 2.24.3 to 2.25.0 (#1269)