@@ -17,7 +17,7 @@
 
   <properties>
     <geotools.version>33.1</geotools.version>
-    <log4j.version>2.24.3</log4j.version>
+    <log4j.version>2.25.0</log4j.version>
     <prometheus.version>0.16.0</prometheus.version>
     <!-- needs to match CEL -->
     <protobuf.version>4.31.1</protobuf.version>
@@ -257,6 +257,17 @@
       <plugin>
         <groupId>io.github.zlika</groupId>
         <artifactId>reproducible-build-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>-proc:full</arg>
+            <compilerArg>-Alog4j.graalvm.groupId=com.onthegomap.planetiler</compilerArg>
+            <compilerArg>-Alog4j.graalvm.artifactId=planetiler-core</compilerArg>
+          </compilerArgs>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
